# difx

./: Makefile.am  configure.ac  ipp.pc.in
applications/difx2fits/: configure.ac
applications/difx2fits/src/: fitsAN.c
applications/difx2mark4/: configure.ac
applications/difx_monitor/: configure.ac
applications/difxcalc11/: configure.ac
applications/difxfilterbank/: configure.ac
applications/espresso/: configure.ac
applications/guiServer/: configure.ac
applications/hops/: configure.ac
applications/vex2difx/src/: corrparams.cpp
libraries/beamformer/: configure.ac
libraries/mark5access/: configure.ac
libraries/mark6meta/: configure.ac
libraries/python/: configure.ac
libraries/vdifio/utils/: Makefile.am
mpifxcorr/: configure.ac
utilities/bitOrderFT/: configure.ac
utilities/difxdb/: configure.ac
utilities/pulsar/difx2profile/: configure.ac
utilities/realtimevdif/: configure.ac
utilities/sim5b/: configure.ac
utilities/vex2ovex/: configure.ac
utilities/vis2screen/: configure.ac
utilities/xcube/: configure.ac
