AC_INIT([printDiFX], [1.0])
AC_CONFIG_SRCDIR(printDiFX.cpp)
AM_INIT_AUTOMAKE
AC_CONFIG_FILES([Makefile])

FXCORR_REQUIRED_VERSION=2.4
PKG_CHECK_MODULES(FXCORR, fxcorr >= $FXCORR_REQUIRED_VERSION)
AC_SUBST(FXCORR_CFLAGS)
AC_SUBST(FXCORR_LIBS)

DIFXMESSAGE_REQUIRED_VERSION=2.4
PKG_CHECK_MODULES(DIFXMESSAGE, difxmessage >= $DIFXMESSAGE_REQUIRED_VERSION)
AC_SUBST(DIFXMESSAGE_CFLAGS)
AC_SUBST(DIFXMESSAGE_LIBS)

AC_PROG_CXX

AC_OUTPUT
